[project]
name = "multilinearperceptronasd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.9.4",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
