[project]
name = "multilinearperceptronasd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.9.4",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pyqt5>=5.15.11",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126"}
]
torchvision = [
  { index = "pytorch-cu126"},
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true